--------------------------------------------------------------------------------
Fusion 1.209 - January ??, 2004
--------------------------------------------------------------------------------
- 01-20-04: Updated Talkie Box/Graffiti [Colus]
- 01-20-04: Updated SetSkillUnit [Colus]
- 01-19-04: Upgraded to new view packets [Colus]
- 01-18-04: Updated Pharmacy [Colus]
- 01-18-04: Fixed unhide consuming SP [Colus]
- 01-18-04: Fixed monster looting more than 10 items bug. Items disappear. [AlexKreuz]
- 01-18-04: Updated Sanctuary/Apple of Idun effects [Colus]
- 01-18-04: Updated item creation packets for forging/Pharmacy [Colus]
- 01-17-04: SearchPath Algorithm v2.0 - 37%-87% performance increase over original. [AlexKreuz]
- 01-16-04: Fixed weapon requirements/error displays for some skills [Colus]
- 01-16-04: Updated error return values [Colus]
- 01-16-04: New SendSkillError function (supercedes SendItemError) [Colus]
- 01-16-04: SendItemError updated [Colus]
- 01-16-04: Fixed flywings/teleport/warp portals while dead/hidden [Colus]
- 01-16-04: Update to Battle Command procedure fix [Colus]
- 01-16-04: Corrections in recovery item use packet [Colus]
- 01-16-04: Correction in recovery item formula for Learning Potion bonus [Colus]
- 01-16-04: Correction in recovery item formula for HP Recovery Skill bonus [Colus]
- 01-16-04: Updated Potion Pitcher [Colus]
 - NOTE: If you cannot select levels for this skill that is a client-side issue.
- 01-16-04: Fixed major crash bug in Battle Command procedure. [AlexKreuz]
- 01-15-04: Updated SendCMove, aura display [Colus]
- 01-15-04: Updated Snatcher and Steal again [Colus]
- 01-14-04: Fixed inability to forge metals (bug #275) [Colus]
- 01-14-04: Fixed new weapon sprites appearing on map load. [Colus]
- 01-13-04: Updated DirMove algorithm. [Colus]
- 01-13-04: Restored/corrected previous IW behavior until pathing is updated [Colus]
- 01-13-04: Readded Savian's sprite fix (nonfunctional b/c of other code) [Colus]