@@ -1,6 +1,9 @@
 --------------------------------------------------------------------------------
 Fusion 1.209 - January ??, 2004
 --------------------------------------------------------------------------------
+- 01-21-04: Updated Graphics for Chemical protection Alchemist -[Oatmeal]
+- 01-21-04: Added steal coin graphics when success-[Oatmeal]
+- 01-21-04: Added venom splasher (still needs work after death splash posion effect)-[Oatmeal]
 - 01-20-04: Updated Talkie Box/Graffiti [Colus]
 - 01-20-04: Updated SetSkillUnit [Colus]
 - 01-19-04: Upgraded to new view packets [Colus]
